--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
 name = "udbot"
 version = "0.1.0"
+authors = ["idkwhoiam322 <idkwhoiam322@raphielgang.org>"]
 edition = "2018"
+description = "A Telegram bot that gets word definitions from Urban Dictionary"
+repository = "https://github.com/idkwhoiam322/udbot"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+teloxide = { version = "0.5", features = ["macros"] }
+tokio = { version =  "1.9.0", features = ["rt-multi-thread", "macros"] }
+tokio-stream = "0.1.5"
+log = "0.4.14"
+pretty_env_logger = "0.4.0"
+serde = "1.0.126"
+serde_json = "1.0.64"
