semaphore: Force push the code to be resilent to force pushes on git
Signed-off-by: baalajimaestro <me@baalajimaestro.me>

--- a/.ci.yml
+++ b/.ci.yml
@@ -25,4 +25,4 @@ blocks:
           - git init
           - git fetch https://github.com/idkwhoiam322/udbot $SEMAPHORE_GIT_SHA
           - git reset --hard FETCH_HEAD
-          - git push https://git.heroku.com/idkwhoiam-udbot.git HEAD:master
+          - git push -f https://git.heroku.com/idkwhoiam-udbot.git HEAD:master
